# python-adjtimex-experiments

./: README.md  ctypes_adjtimex.py
cffi_adjtimex/: .gitignore  MANIFEST.in  adjtimex.py  adjtimex_build.py  setup.cfg  setup.py  tox.ini
cython_adjtimex/: MANIFEST.in  adjtimex.pyx  pyproject.toml  setup.cfg  setup.py  tox.ini
pyo3_adjtimex/: .gitignore  Cargo.toml  pyproject.toml
pyo3_adjtimex/src/: lib.rs
