[metadata]
name = adjtimex
version = 0.0.1
description = CFFI binding to adjtimex()
author = Alex Willmer
author_email = alex@moreati.org.uk
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules =
    adjtimex
install_requires =
    cffi>=1.16
    setuptools
setup_requires =
    cffi>=1.16
    setuptools
    wheel
python_requires = >=3.8
