[package]
name = "adjtimex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "adjtimex"
crate-type = ["cdylib"]

[dependencies]
errno = "0.3.8"
libc = "0.2.153"
pyo3 = { version = "0.21.2", features = ["extension-module"] }
